feat: initial work for set display picture modal done
still need to do logic and handle multiple modals on screen

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -507,5 +507,7 @@
   "reactionPopupThree": "$name$, $name2$ & $name3$",
   "reactionPopupMany": "$name$, $name2$, $name3$ &",
   "reactionListCountSingular": "And $otherSingular$ has reacted <span>$emoji$</span> to this message",
-  "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message"
+  "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message",
+  "setDisplayPicture": "Set Display Picture",
+  "upload": "Upload"
 }
