--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -508,6 +508,5 @@
   "reactionPopupMany": "$name$, $name2$, $name3$ &",
   "reactionListCountSingular": "And $otherSingular$ has reacted <span>$emoji$</span> to this message",
   "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message",
-  "setDisplayPicture": "Set Display Picture",
-  "upload": "Upload"
+  "setDisplayPicture": "Set Display Picture"
 }
