feat: added support for tracking the confirmation process status and its type
attempting to show this status inside of the ConversationListItem message section, show confirmation modal when leaving private chats

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -100,7 +100,11 @@
   "deleteMessagesQuestion": "Delete $count$ messages?",
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Delete Messages",
+  "deleteMessagesConfirmation": "Permanently delete the messages in this conversation?",
   "deleteConversation": "Delete Conversation",
+  "deleteConversationConfirmation": "Are you sure you want to delete your conversation with $name$?",
+  "deleteConversationFailed": "Failed to leave the Conversation!",
+  "leaving": "Leaving...",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
   "from": "From:",
@@ -111,7 +115,6 @@
   "groupMembers": "Members",
   "moreInformation": "More information",
   "resend": "Resend",
-  "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clear": "Clear",
   "clearAllData": "Clear All Data",
   "deleteAccountWarning": "This will permanently delete your messages and contacts.",
@@ -256,8 +259,11 @@
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
   "leaveAndRemoveForEveryone": "Leave Group and Remove for Everyone",
-  "leaveGroupConfirmation": "Are you sure you want to leave this group?",
+  "leaveGroupConfirmation": "Are you sure you want to leave $name$?",
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
+  "leaveGroupFailed": "Failed to leave Group!",
+  "leaveCommunity": "Leave Community",
+  "leaveCommunityFailed": "Failed to leave Community!",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
   "noContactsForGroup": "You don't have any contacts yet",
