fix: remove AdminLeaveClosedGroupDialog
added new leave group dialog strings

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -102,7 +102,7 @@
   "deleteMessages": "Delete Messages",
   "deleteMessagesConfirmation": "Permanently delete the messages in this conversation?",
   "deleteConversation": "Delete Conversation",
-  "deleteConversationConfirmation": "Are you sure you want to delete your conversation with $name$?",
+  "deleteConversationConfirmation": "Are you sure you want to delete your conversation with <b>$name$</b>?",
   "deleteConversationFailed": "Failed to leave the Conversation!",
   "leaving": "Leaving...",
   "deleted": "$count$ deleted",
@@ -257,10 +257,14 @@
   "banUserAndDeleteAll": "Ban and Delete All",
   "userBanned": "Banned successfully",
   "userBanFailed": "Ban failed!",
+  "leave": "Leave",
   "leaveGroup": "Leave Group",
   "leaveAndRemoveForEveryone": "Leave Group and Remove for Everyone",
-  "leaveGroupConfirmation": "Are you sure you want to leave $name$?",
+  "leaveGroupConfirmation": "Are you sure you want to leave <b>$name$</b>?",
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
+  "leaveGroupConrirmationOnlyAdminLegacy": "Are you sure you want to leave <b>$name$</b>? This will deactivate the group for all members.",
+  "leaveGroupConfirmationOnlyAdmin": "You are the only admin in <b>$name$</b>",
+  "leaveGroupConfirmationOnlyAdminWarning": "Group settings and members cannot be changed without an admin",
   "leaveGroupFailed": "Failed to leave Group!",
   "leaveCommunity": "Leave Community",
   "leaveCommunityFailed": "Failed to leave Community!",
@@ -326,6 +330,7 @@
   "editProfileModalTitle": "Profile",
   "groupNamePlaceholder": "Group Name",
   "inviteContacts": "Invite Contacts",
+  "addModerator": "Add Admin",
   "addModerators": "Add Admins",
   "removeModerators": "Remove Admins",
   "addAsModerator": "Add as Admin",
