feat: finished note to self and 1o1 conversation leaving and hiding

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -94,6 +94,7 @@
   "continue": "Continue",
   "error": "Error",
   "delete": "Delete",
+  "hide": "Hide",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteJustForMe": "Delete just for me",
   "deleteForEveryone": "Delete for everyone",
@@ -101,9 +102,13 @@
   "deleteMessageQuestion": "Delete this message?",
   "deleteMessages": "Delete Messages",
   "deleteMessagesConfirmation": "Permanently delete the messages in this conversation?",
+  "hideConversation": "Hide Conversation",
+  "hideNoteToSelfConfirmation": "Are you sure you want to hide your <b>Note to Self</b> conversation?",
+  "hideConversationFailed": "Failed to hide the Conversation!",
   "deleteConversation": "Delete Conversation",
   "deleteConversationConfirmation": "Are you sure you want to delete your conversation with <b>$name$</b>?",
   "deleteConversationFailed": "Failed to leave the Conversation!",
+  "hiding": "Hiding...",
   "leaving": "Leaving...",
   "deleted": "$count$ deleted",
   "messageDeletedPlaceholder": "This message has been deleted",
