feat: updated copy for interaction error messages show in a conversation

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -105,9 +105,11 @@
   "hideConversation": "Hide Conversation",
   "hideNoteToSelfConfirmation": "Are you sure you want to hide your <b>Note to Self</b> conversation?",
   "hideConversationFailed": "Failed to hide the Conversation!",
+  "hideConversationFailedPleaseTryAgain": "Unable to hide the conversation, please try again",
   "deleteConversation": "Delete Conversation",
   "deleteConversationConfirmation": "Are you sure you want to delete your conversation with <b>$name$</b>?",
   "deleteConversationFailed": "Failed to leave the Conversation!",
+  "deleteConversationFailedPleaseTryAgain": "Unable to delete the conversation, please try again",
   "hiding": "Hiding...",
   "leaving": "Leaving...",
   "deleted": "$count$ deleted",
@@ -271,8 +273,10 @@
   "leaveGroupConfirmationOnlyAdmin": "You are the only admin in <b>$name$</b>",
   "leaveGroupConfirmationOnlyAdminWarning": "Group settings and members cannot be changed without an admin",
   "leaveGroupFailed": "Failed to leave Group!",
+  "leaveGroupFailedPleaseTryAgain": "Unable to leave the Group, please try again",
   "leaveCommunity": "Leave Community",
   "leaveCommunityFailed": "Failed to leave Community!",
+  "leaveCommunityFailedPleaseTryAgain": "Unable to leave the Community, please try again",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
   "noContactsForGroup": "You don't have any contacts yet",
