--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -70,9 +70,10 @@
   "show": "Show",
   "sessionMessenger": "Session",
   "noSearchResults": "No results found for \"$searchTerm$\"",
-  "conversationsHeader": "Contacts and Groups",
+  "conversationsHeader": "Contacts and Groups: $count$",
   "contactsHeader": "Contacts",
   "messagesHeader": "Conversations",
+  "searchMessagesHeader": "Messages: $count$",
   "settingsHeader": "Settings",
   "typingAlt": "Typing animation for this conversation",
   "contactAvatarAlt": "Avatar for contact $name$",
