feat: Allow enter to break line in settings
https://github.com/oxen-io/session-desktop/issues/1486

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -410,6 +410,10 @@
   "open": "Open",
   "audioMessageAutoplayTitle": "Autoplay Audio Messages",
   "audioMessageAutoplayDescription": "Autoplay consecutive audio messages.",
+  "enterKeySettingTitle": "Enter Key",
+  "enterKeySettingDescription": "Function of the enter key when typing in a conversation.",
+  "enterSendNewMessageDescription": "ENTER sends a message, SHIFT + ENTER starts a new line",
+  "enterNewLineDescription": "SHIFT + ENTER sends a message, ENTER starts a new line",
   "clickToTrustContact": "Click to download media",
   "trustThisContactDialogTitle": "Trust $name$?",
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
