--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -181,7 +181,7 @@
   "messageBodyMissing": "Please enter a message body.",
   "messageBody": "Message body",
   "unblockToSend": "Unblock this contact to send a message.",
-  "unblockGroupToSend": "This group is blocked. Unlock it if you would like to send a message.",
+  "unblockGroupToSend": "This group is blocked. Unblock it if you would like to send a message.",
   "timer": "Timer",
   "timerModeRead": "read",
   "timerModeSent": "sent",
