feat: implement setting to follow system theme
feat: check theme congruence on startup and on native theme update

fix: make toggle and startup following work

fix: should return here, but this breaks things

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -222,6 +222,8 @@
   "noteToSelf": "Note to Self",
   "hideMenuBarTitle": "Hide Menu Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
+  "matchThemeSystemSettingTitle": "Auto night-mode",
+  "matchThemeSystemSettingDescription": "Match system settings",
   "startConversation": "Start New Conversation",
   "invalidNumberError": "Please check the Session ID or ONS name and try again",
   "failedResolveOns": "Failed to resolve ONS name",
