--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -527,5 +527,13 @@
   "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message",
   "setDisplayPicture": "Set Display Picture",
   "settingAppliesToEveryone": "This setting applies to everyone in this conversation.",
-  "onlyGroupAdminsCanChange": "Only group admins can change this setting."
+  "onlyGroupAdminsCanChange": "Only group admins can change this setting.",
+  "messageInfo": "Message Info",
+  "fileId": "File ID",
+  "fileSize": "File Size",
+  "fileType": "File Type",
+  "resolution": "Resolution",
+  "duration": "Duration",
+  "notApplicable": "N/A",
+  "unknownError": "Unknown Error"
 }
