feat: merge expiring stopwatch and messagestatus together

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -109,10 +109,13 @@
   "from": "From:",
   "to": "To:",
   "sent": "Sent",
+  "sending": "Sending",
   "received": "Received",
   "sendMessage": "Message",
   "groupMembers": "Members",
   "moreInformation": "More information",
+  "failed": "Failed",
+  "read": "Read",
   "resend": "Resend",
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clear": "Clear",
