--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -259,6 +259,9 @@
   "groupOthersPromoted": "<b>$name$</b> and <b>$count$ others</b> were promoted to Admin.",
 
   "inviteFailed": "Invite Failed",
+  "invitePending": "Invite Pending",
+  "promotionFailed": "Promotion Failed",
+  "promotionPending": "Promotion Pending",
   "groupInviteFailedOne": "Failed to invite <b>$name$</b> to <b>$groupname$</b>",
   "groupInviteFailedTwo": "Failed to invite <b>$first$</b> and <b>$second$</b> to <b>$groupname$</b>",
   "groupInviteFailedOthers": "Failed to invite <b>$first$</b> and <b>$count$ others</b> to <b>$groupname$</b>",
