--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -490,7 +490,7 @@
   "youHaveANewFriendRequest": "May bago kang friend request",
   "clearAllConfirmationTitle": "I-clear ang Lahat ng Kahilingan sa Pagmemensahe",
   "clearAllConfirmationBody": "Sigurado ka bang gusto mong i-clear ang lahat ng kahilingan sa pagmemensahe?",
-  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "thereAreNoMessagesIn": "There are no messages in <b>$name$</b>.",
   "noMessagesInBlindedDisabledMsgRequests": "<b>$name$</b> has message requests from Community conversations turned off, so you cannot send them a message.",
   "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
   "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
