--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -490,7 +490,7 @@
   "youHaveANewFriendRequest": "Έχετε ένα νέο αίτημα φιλίας",
   "clearAllConfirmationTitle": "Διαγραφή Όλων των Αιτημάτων Μηνυμάτων",
   "clearAllConfirmationBody": "Σίγουρα θέλετε να διαγράψετε όλα τα αιτήματα μηνυμάτων;",
-  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "thereAreNoMessagesIn": "There are no messages in <b>$name$</b>.",
   "noMessagesInBlindedDisabledMsgRequests": "<b>$name$</b> has message requests from Community conversations turned off, so you cannot send them a message.",
   "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
   "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
