--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -490,7 +490,7 @@
   "youHaveANewFriendRequest": "יש לך בקשת חברות חדשה",
   "clearAllConfirmationTitle": "ניקוי כל בקשות ההודעות",
   "clearAllConfirmationBody": "האם את/ה בטוח/ה שברצונך למחוק את כל בקשות ההודעות?",
-  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "thereAreNoMessagesIn": "There are no messages in <b>$name$</b>.",
   "noMessagesInBlindedDisabledMsgRequests": "<b>$name$</b> has message requests from Community conversations turned off, so you cannot send them a message.",
   "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
   "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
