--- a/_locales/hy-AM/messages.json
+++ b/_locales/hy-AM/messages.json
@@ -490,7 +490,7 @@
   "youHaveANewFriendRequest": "Դուք ունեք նոր հաղորդագրության հարցում",
   "clearAllConfirmationTitle": "Մաքրել բոլոր հաղորդագրությունների հարցումները",
   "clearAllConfirmationBody": "Իսկապե՞ս ուզում եք ջնջել հաղորդագրությունների բոլոր հարցումները:",
-  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "thereAreNoMessagesIn": "There are no messages in <b>$name$</b>.",
   "noMessagesInBlindedDisabledMsgRequests": "<b>$name$</b> has message requests from Community conversations turned off, so you cannot send them a message.",
   "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
   "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
