--- a/_locales/km/messages.json
+++ b/_locales/km/messages.json
@@ -490,7 +490,7 @@
   "youHaveANewFriendRequest": "អ្នក​មាន​ការស្នើសុំ​សារ​ថ្មីមួយ",
   "clearAllConfirmationTitle": "ជម្រះការស្នើសុំសារទាំងអស់",
   "clearAllConfirmationBody": "តើអ្នកប្រាកដទេថា អ្នកពិតចង់លុបសំណើសារទាំងអស់ចេញ?",
-  "noMessagesInReadOnly": "There are no messages in <b>$name$</b>.",
+  "thereAreNoMessagesIn": "There are no messages in <b>$name$</b>.",
   "noMessagesInBlindedDisabledMsgRequests": "<b>$name$</b> has message requests from Community conversations turned off, so you cannot send them a message.",
   "noMessagesInNoteToSelf": "You have no messages in <b>$name$</b>.",
   "noMessagesInEverythingElse": "You have no messages from <b>$name$</b>. Send a message to start the conversation!",
