feat: group message requests kind of working
still need to have them visible in the msg request only

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -504,7 +504,11 @@
   "messageRequestAcceptedOurs": "You have accepted $name$'s message request",
   "messageRequestAcceptedOursNoName": "You have accepted the message request",
   "declineRequestMessage": "Are you sure you want to decline this message request?",
+  "deleteGroupRequest": "Are you sure you want to delete this group invite?",
+  "deleteGroupRequestAndBlock": "Are you sure you want to block <b>$name$</b>? Blocked users cannot send you message requests, group invites or call you.",
   "respondingToRequestWarning": "Sending a message to this user will automatically accept their message request and reveal your Session ID.",
+  "respondingToGroupRequestWarning": "Sending a message to this group will automatically accept the group invite.",
+  "userInvitedYouToGroup": "<b>$name$</b> invited you to join <b>$groupName$</b>.",
   "hideRequestBanner": "Hide Message Request Banner",
   "openMessageRequestInbox": "Message Requests",
   "noMessageRequestsPending": "No pending message requests",
