feat: add cleanup of old expire update in history
we only keep one from each sender

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -192,10 +192,10 @@
   "followSetting": "Follow Setting",
   "followSettingDisabled": "Messages you send will no longer disappear. Are you sure you want to turn off disappearing messages?",
   "followSettingTimeAndType": "Set your messages to disappear $time$ after they have been $type$?",
-  "youChangedTheTimer": "You have set messages to disappear $time$ after they have been $mode$",
-  "youChangedTheTimerLegacy": "You set the disappearing message timer to $time$",
-  "theyChangedTheTimer": "$name$ has set messages to disappear $time$ after they have been $mode$",
-  "theyChangedTheTimerLegacy": "$name$ set the disappearing message timer to $time$",
+  "youChangedTheTimer": "<b>You</b> have set messages to disappear <b>$time$</b> after they have been <b>$mode$</b>",
+  "youChangedTheTimerLegacy": "<b>You<b> set the disappearing message timer to <b>$time$</b>",
+  "theyChangedTheTimer": "<b>$name$</b> has set messages to disappear <b>$time$</b> after they have been <b>$mode$</b>",
+  "theyChangedTheTimerLegacy": "<b>$name$</b> set the disappearing message timer to <b>$time$</b>",
   "timerOption_0_seconds": "Off",
   "timerOption_5_seconds": "5 seconds",
   "timerOption_10_seconds": "10 seconds",
@@ -233,12 +233,12 @@
   "disappearingMessagesModeLegacy": "Legacy",
   "disappearingMessagesModeLegacySubtitle": "Original version of disappearing messages.",
   "disappearingMessagesDisabled": "Disappearing messages disabled",
-  "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
-  "youDisabledDisappearingMessages": "You have turned off disappearing messages.",
-  "youDisabledYourDisappearingMessages": "You turned off disappearing messages. Messages you send will no longer disappear.",
-  "youSetYourDisappearingMessages": "You set your messages to disappear $time$ after they have been $type$.",
-  "theyDisabledTheirDisappearingMessages": "$name$ has turned off disappearing messages. Messages they send will no longer disappear.",
-  "theySetTheirDisappearingMessages": "$name$ has set their messages to disappear $time$ after they have been $type$.",
+  "disabledDisappearingMessages": "<b>$name$</b> has turned <b>off</b> disappearing messages.",
+  "youDisabledDisappearingMessages": "<b>You</b> have turned <b>off</b> disappearing messages.",
+  "youDisabledYourDisappearingMessages": "<b>You</b> turned <b>off</b> disappearing messages. Messages you send will no longer disappear.",
+  "youSetYourDisappearingMessages": "<b>You</b> set your messages to disappear <b>$time$</b> after they have been <b>$type$</b>.",
+  "theyDisabledTheirDisappearingMessages": "<b>$name$</b> has turned <b>off</b> disappearing messages. Messages they send will no longer disappear.",
+  "theySetTheirDisappearingMessages": "<b>$name$</b> has set their messages to disappear <b>$time$</b> after they have been <b>$type$</b>.",
   "timerSetTo": "Disappearing message time set to $time$",
   "set": "Set",
   "changeNickname": "Change Nickname",
